Ajout des @param + modif constructeur + modif des méthodes (switch simplifié sans le throw) + supp removeFirst (appel direct) + modif TwithTopTIleDrawnUntil